--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,14 @@
         android:theme="@style/Theme.Gruppe03"
         tools:targetApi="31">
         <activity
+            android:name=".MenuScreenActivity"
+            android:exported="true" />
+        <activity
             android:name=".FirstScreenActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
