--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Gruppe03"
         tools:targetApi="31">
         <activity
+            android:name=".Overlay"
+            android:exported="true" />
+        <activity
             android:name=".MenuScreenActivity"
             android:exported="true" />
         <activity
@@ -20,7 +23,7 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
