--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -13,16 +14,22 @@
         android:theme="@style/Theme.Gruppe03"
         tools:targetApi="31">
         <activity
-            android:name=".Overlay"
+            android:name=".ThreePlayers"
+            android:exported="false" />
+        <activity
+            android:name=".Tr"
+            android:exported="false" />
+        <activity
+            android:name=".TwoPlayers"
+            android:exported="true" />
+        <activity
+            android:name=".PopUp1"
             android:exported="true" />
         <activity
             android:name=".MenuScreenActivity"
             android:exported="true" />
         <activity
             android:name=".FirstScreenActivity"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
