--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ThreePlayers"
-            android:exported="false" />
-        <activity
-            android:name=".Tr"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".TwoPlayers"
             android:exported="true" />
