--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:theme="@style/Theme.Gruppe03"
         tools:targetApi="31">
         <activity
+            android:name="com.example.gruppe03.SpinCarrot"
+            android:exported="false" />
+        <activity
+            android:name="com.example.gruppe03.GoThreeFields"
+            android:exported="false" />
+        <activity
+            android:name="com.example.gruppe03.GoTwoFields"
+            android:exported="false" />
+        <activity
+            android:name="com.example.gruppe03.GoOneField"
+            android:exported="true" />
+        <activity
             android:name="com.example.gruppe03.DrawCard"
             android:exported="true" />
         <activity
