--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         tools:targetApi="31">
         <activity
             android:name="com.example.gruppe03.SpinCarrot"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name="com.example.gruppe03.GoThreeFields"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name="com.example.gruppe03.GoTwoFields"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name="com.example.gruppe03.GoOneField"
             android:exported="true" />
