--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 }
 
 android {
-    namespace 'com.example.spielbrett-gruppe3'
+    namespace 'com.example.spielbrett_gruppe3'
     compileSdk 34
 
 
     defaultConfig {
-        applicationId "com.example.spielbrett-gruppe3"
+        applicationId "com.example.spielbrett_gruppe3"
         minSdk 29
         targetSdk 34
         versionCode 1
