initial commit after fixing client

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,5 +19,5 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = "Spielbrett - Gruppe 3"
+rootProject.name = "WebSocketDemo-App"
 include ':app'
