--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,21 @@
 plugins {
     alias(libs.plugins.androidApplication)
-    alias(libs.plugins.jetbrainsKotlinAndroid)
     id 'jacoco'
     id 'org.sonarqube' version '4.4.1.3373'
 }
 
 android {
-    namespace 'com.example.spielbrett_gruppe3'
+    namespace 'at.aau.serg.websocketdemoapp'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.spielbrett_gruppe3"
-        minSdk 29
+        applicationId "at.aau.serg.websocketdemoapp"
+        minSdk 26
         targetSdk 34
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
     }
 
     buildTypes {
@@ -32,20 +28,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-    buildFeatures {
-        compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.5.1'
-    }
-    packaging {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
-    }
+
     testOptions {
         unitTests.all {
             useJUnitPlatform()
@@ -73,8 +56,8 @@ tasks.register('jacocoTestReport', JacocoReport) {
 
 sonar {
     properties {
-        property "sonar.projectKey", "Gruppe-III_gruppe03"
-        property "sonar.organization", "gruppe-iii"
+        property "sonar.projectKey", "AAU-SE2_WebSocketDemo-App"
+        property "sonar.organization", "aau-se2"
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.java.coveragePlugin", "jacoco"
         property "sonar.coverage.jacoco.xmlReportPaths", "${project.projectDir}/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml"
@@ -82,27 +65,19 @@ sonar {
 }
 
 dependencies {
-    implementation libs.androidx.core.ktx
-    implementation libs.androidx.lifecycle.runtime.ktx
-    implementation libs.androidx.activity.compose
-    implementation platform(libs.androidx.compose.bom)
-    implementation libs.androidx.ui
-    implementation libs.androidx.ui.graphics
-    implementation libs.androidx.ui.tooling.preview
-    implementation libs.androidx.material3
-    implementation libs.material
-    testImplementation libs.junit
-    androidTestImplementation libs.androidx.junit
-    androidTestImplementation libs.androidx.espresso.core
-    androidTestImplementation platform(libs.androidx.compose.bom)
-    androidTestImplementation libs.androidx.ui.test.junit4
-    debugImplementation libs.androidx.ui.tooling
-    debugImplementation libs.androidx.ui.test.manifest
-    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation "androidx.constraintlayout:constraintlayout:2.2.0-alpha13"
-    // To use constraintlayout in compose
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha13"
 
+    implementation libs.appcompat
+    implementation libs.material
+    implementation libs.activity
+    implementation libs.constraintlayout
+    testImplementation libs.junit
+    androidTestImplementation libs.ext.junit
+    androidTestImplementation libs.espresso.core
+    implementation libs.okhttp
+    testImplementation libs.junit.jupiter.api
+    testRuntimeOnly libs.junit.jupiter.engine
+
+    //gradle import for gson
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
 
 }
