--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,22 +12,25 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SpielbrettGruppe3"
+        android:theme="@style/Theme.WebSocketDemoApp"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name="activity.MainActivity"
+            android:name="websocketdemoapp.activities.UserActivity"
+            android:exported="false" />
+        <activity
+            android:name="websocketdemoapp.activities.StartMenu"
+            android:exported="false" />
+        <activity
+            android:name="websocketdemoapp.activities.MainActivity"
             android:exported="true">
+
+            <!-- Define this activity as the default/main activity -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!--user activity-->
-        <activity
-            android:name="activity.UserActivity"
-            android:exported="true">
         </activity>
     </application>
 
